--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -216,6 +216,7 @@ deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
+deny 176.65.134.4;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -945,10 +946,9 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
 deny 23.191.200.28;
-deny 23.191.200.29;
 deny 23.191.200.3;
-deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.5;
 deny 23.191.200.7;
@@ -993,6 +993,7 @@ deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
+deny 2602:f915:f:3b43::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -1285,6 +1286,7 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
+deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -1629,6 +1631,8 @@ deny 37.114.63.5;
 deny 37.187.5.192;
 deny 37.221.208.71;
 deny 37.228.129.128;
+deny 37.228.129.162;
+deny 37.228.129.168;
 deny 37.228.129.189;
 deny 37.228.129.5;
 deny 37.228.129.63;
