--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -199,7 +199,6 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
-allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.105.203.121;
 allow 172.232.209.254;
@@ -938,7 +937,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -948,9 +946,10 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.3;
-allow 23.191.200.31;
+allow 23.191.200.30;
+allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -958,7 +957,6 @@ allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
-allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1200,8 +1198,6 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:10a:2d23::2;
-allow 2a01:5e0:36:c311::1;
-allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1259,6 +1255,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1620,7 +1617,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1651,6 +1647,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1768,6 +1765,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1821,10 +1819,6 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
-allow 77.48.28.193;
-allow 77.48.28.204;
-allow 77.48.28.237;
-allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.241.60.207;
@@ -1911,10 +1905,6 @@ allow 93.95.228.125;
 allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
-allow 93.99.104.18;
-allow 93.99.104.194;
-allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.131.2.186;
 allow 94.142.241.194;
