--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -135,7 +135,6 @@ deny 149.56.44.47;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.184.161;
-deny 152.53.200.42;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.26.159.157;
@@ -201,7 +200,6 @@ deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.65.151.192;
 deny 176.65.151.193;
-deny 176.65.151.194;
 deny 176.97.114.202;
 deny 177.93.140.66;
 deny 178.17.170.144;
@@ -278,6 +276,7 @@ deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.238.9;
 deny 185.183.157.214;
+deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.191.239.158;
 deny 185.191.239.49;
@@ -588,7 +587,6 @@ deny 194.26.192.177;
 deny 194.26.192.77;
 deny 194.53.137.102;
 deny 194.87.55.98;
-deny 195.160.220.104;
 deny 195.160.220.38;
 deny 195.170.172.212;
 deny 195.176.3.23;
@@ -914,6 +912,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -921,15 +920,14 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.27;
-deny 23.191.200.30;
-deny 23.191.200.31;
-deny 23.191.200.5;
-deny 23.191.200.6;
+deny 23.191.200.29;
+deny 23.191.200.3;
+deny 23.191.200.4;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
 deny 23.236.122.193;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:d320:2202:5765::1;
@@ -950,7 +948,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.93;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1156,7 +1153,6 @@ deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
 deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
-deny 2a00:11c0:47:208d:4bf:76ff:fe2d:cee6;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
@@ -1197,6 +1193,7 @@ deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
+deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 deny 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 deny 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
 deny 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
@@ -1233,12 +1230,17 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
+deny 2a04:52c0:104:31e6::1;
+deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:115:df08::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
@@ -1518,7 +1520,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:22:ae1f:6bff:fed5:ed08;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:223;
@@ -1747,12 +1748,15 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.110.120;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.117.56;
 deny 5.255.118.151;
 deny 5.255.118.218;
@@ -1764,6 +1768,8 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.124;
+deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.72.110;
@@ -1795,7 +1801,6 @@ deny 66.78.40.182;
 deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
@@ -1875,7 +1880,6 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
-deny 91.219.236.91;
 deny 91.227.114.153;
 deny 91.92.109.126;
 deny 91.92.109.43;
